<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="#00e5ff"
    android:textDirection="firstStrong"
    android:textAlignment="center"
    tools:context="com.ashraf.mathskilltester.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:textAllCaps="false"
            android:background="#dcedc8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:id="@+id/btn_beginner"
            />

        <Button
            android:layout_marginTop="5dp"
            android:layout_below="@+id/btn_beginner"
            android:textAllCaps="false"
            android:background="#dcedc8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intermediate"
            android:id="@+id/btn_intermediate"
            />
        <Button
            android:layout_marginTop="5dp"
            android:layout_below="@+id/btn_intermediate"
            android:textAllCaps="false"
            android:background="#dcedc8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expert"
            android:id="@+id/btn_expert"
            />
        <Button
            android:layout_marginTop="5dp"
            android:layout_below="@+id/btn_expert"
            android:textAllCaps="false"
            android:background="#dcedc8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extraordinary"
            android:id="@+id/btn_extraordinary"
            />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
